[package]
name = "eth-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5"
aws-sdk-kms = "1.48.0"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "^0.15.0"
eyre = "0.6"
gcloud-sdk = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dependencies.alloy]
version = "0.6"
features = [
    "full",
    "rlp",
    "signer-keystore",
    "signer-mnemonic",
    "signer-aws",
    "signer-gcp",
]
