[package]
name = "sol-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5"
aws-sdk-kms = "1.48.0"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "^0.15.0"
eyre = "0.6"
gcloud-sdk = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2.2.1"
solana-signer-gcp = { git = "https://github.com/webisopen/solana-signer-gcp.git" }
thiserror = "1.0"
tiny-bip39 = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
